Try to fix issue with system bar overlapping

--- a/src/styles.less
+++ b/src/styles.less
@@ -37,6 +37,9 @@ html.mobile {
     position: fixed;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
+
+    padding-top: env(safe-area-inset-top);
+    padding-bottom: env(safe-area-inset-bottom);
   }
 
   .ant-popover {
